feat: backend driver applications view, auto '54' phone normalization, and 4-digit OTP